--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <span class="stars">★★★★★</span>
                     <span class="review-count">(28 reviews)</span>
                 </div>
-                <div class="price">$199.99</div>
+                <div class="price">k20, 000:00</div>
                 <button class="buy-btn">View Details</button>
             </div>
             <div class="product-card" data-product-id="6">
